k8s/k8s-yaml/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name:  go-gokit-gorilla-restsvc
  namespace: default
  labels:
    app:  go-gokit-gorilla-restsvc
spec:
  selector:
    matchLabels:
      app: go-gokit-gorilla-restsvc
  replicas: 1
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      labels:
        app:  go-gokit-gorilla-restsvc
    spec:
      # initContainers:
        # Init containers are exactly like regular containers, except:
          # - Init containers always run to completion.
          # - Each init container must complete successfully before the next one starts.
      containers:
      - name:  go-gokit-gorilla-restsvc
        image:  isgogolgo13/go-gokit-gorilla-restsvc:1.0
        resources:
          requests:
            cpu: 100m
            memory: 100Mi
          limits:
            cpu: 100m
            memory: 100Mi
        # livenessProbe:
        #   tcpSocket:
        #     port: 80
        #   initialDelaySeconds: 5
        #   timeoutSeconds: 5
        #   successThreshold: 1
        #   failureThreshold: 3
        #   periodSeconds: 10
        # readinessProbe:
        #   httpGet:
        #     path: /_status/healthz
        #     port: 80
        #   initialDelaySeconds: 5
        #   timeoutSeconds: 2
        #   successThreshold: 1
        #   failureThreshold: 3
        #   periodSeconds: 10
      #   env:
      #   - name: ""
      #     valueFrom:
      #       configMapKeyRef:
      #         name: ""
      #         key: ""
      #   ports:
      #   - containerPort: 8080
      #     name: ""
      #   volumeMounts:
      #   - name: ""
      #     mountPath: ""
      # volumes:
      #   - name: ""
      #     hostPath:
      #       path: ""
      restartPolicy: Always
