k8s/k8s-yaml/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: go-gokit-gorilla-restsvc
spec:
  selector:
    app: go-gokit-gorilla-restsvc
  type: ClusterIP
  ports:
  - port: 8080
    targetPort: 8080
