k8s/k8s-yaml/app.yaml
# Deployment
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gokit-gorillakit-enginesvc
  namespace: enginesvc
  labels:
    app: gokit-gorillakit-enginesvc
spec:
  selector:
    matchLabels:
      app: gokit-gorillakit-enginesvc
  replicas: 1
  # strategy:
  #   rollingUpdate:
  #     maxSurge: 25%
  #     maxUnavailable: 25%
  #   type: RollingUpdate
  template:
    metadata:
      labels:
        app:  gokit-gorillakit-enginesvc
    spec:
      # initContainers:
        # Init containers are exactly like regular containers, except:
          # - Init containers always run to completion.
          # - Each init container must complete successfully before the next one starts.
      containers:
      - name:  gokit-gorillakit-enginesvc
        image:  isgogolgo13/gokit-gorillakit-enginesvc:1.0
        resources:
          requests:
            cpu: 100m
            memory: 100Mi
          limits:
            cpu: 100m
            memory: 100Mi
        # livenessProbe:
        #   tcpSocket:
        #     port: 80
        #   initialDelaySeconds: 5
        #   timeoutSeconds: 5
        #   successThreshold: 1
        #   failureThreshold: 3
        #   periodSeconds: 10
        # readinessProbe:
        #   httpGet:
        #     path: /health
        #     port: 80
        #   initialDelaySeconds: 5
        #   timeoutSeconds: 2
        #   successThreshold: 1
        #   failureThreshold: 3
        #   periodSeconds: 10
      #   env:
      #   - name: ""
      #     valueFrom:
      #       configMapKeyRef:
      #         name: ""
      #         key: ""
        ports:
        - containerPort: 8080
      #     name: ""
      #   volumeMounts:
      #   - name: ""
      #     mountPath: ""
      # volumes:
      #   - name: ""
      #     hostPath:
      #       path: ""
      restartPolicy: Always

---
# Service
apiVersion: v1
kind: Service
metadata:
  name: gokit-gorillakit-enginesvc
  namespace: enginesvc
spec:
  selector:
    app: gokit-gorillakit-enginesvc 
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 8080

---
# Ingress
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: gokit-gorillakit-enginesvc 
  namespace: enginesvc
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web,websecure
    traefik.ingress.kubernetes.io/router.tls: "false"
ingressClass: traefik 
spec:
  rules:
  - http:
      paths:
      - path: /engines/
        pathType: Exact
        backend:
          service:
            name: gokit-gorillakit-enginesvc
            port:
              number: 80
      - path: /health
        pathType: Exact 
        backend:
          service:
            name: gokit-gorillakit-enginesvc
            port:
              number: 80
