k8s/k8s-yaml/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: go-gokit-gorilla-restsvc
  annotations:
    kubernetes.io/ingress.class: traefik
    traefik.ingress.kubernetes.io/router.entrypoints: web,websecure
    traefik.ingress.kubernetes.io/router.tls: "false"
spec:
  rules:
  - http:
      paths:
      - path: /engines/
        pathType: Exact
        backend:
          serviceName: go-gokit-gorilla-restsvc
          servicePort: 80
